--- a/sc-portal/search.html
+++ b/sc-portal/search.html
@@ -103,46 +103,31 @@
         <div class="py-container">
 
             <div class="bread">
+
                 <!--面包屑-->
                 <ul class="fl sui-breadcrumb">
                     <li><span>全部结果:</span></li>
-                    <li><a href="#">手机</a></li>
-                    <li><span>手机通讯</span></li>
+                    <li v-for="(bread, index) in breads" :key="index"><a href="#" v-if="i < 2">{{bread.name}}</a>
+                        <span v-else>{{bread.name}}</span>
+                    </li>
                 </ul>
                 <!--已选择过滤项-->
                 <ul class="tags-choose">
-                    <li class="tag">
-                        品牌:<span style="color: red">apple</span>
-                        <i class="sui-icon icon-tb-close"></i>
-                    </li>
-                    <li class="tag">
-                        内存:<span style="color: red">4G</span>
-                        <i class="sui-icon icon-tb-close"></i>
+                    <li class="tag" v-for="(v, k) in search.filter" v-if="k !== 'cid3'" :key="k">
+                        {{k === 'brandId' ? '品牌' : k}}:<span style="color: red">{{getFilterValue(k,v)}}</span>
+                        <i class="sui-icon icon-tb-close" @click="removeFilter"></i>
                     </li>
                 </ul>
                 <div class="clearfix"></div>
+
             </div>
             <!--selector-->
             <div class="clearfix selector">
-                <div class="type-wrap">
-                    <div class="fl key">分类</div>
-                    <div class="fl value">
-                        <ul class="type-list">
-                            <li>
-                                <a>手机</a>
-                            </li>
-                            <li>
-                                <a>儿童手表</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="fl ext"></div>
-                </div>
-                <div class="type-wrap" v-for="(f,i) in filters" :key="i" v-if="f.k !== '品牌'">
+                <div class="type-wrap" v-for="(f,i) in remainFilters" :key="i" v-if="f.k !== '品牌'" v-show="i<5 || show">
                     <div class="fl key">{{f.k}}</div>
                     <div class="fl value">
                         <ul class="type-list">
-                            <li v-for="(option, j) in f.options" :key="j">
+                            <li v-for="(option, j) in f.options" :key="j" @click="selectFilter(f.k, option)">
                                 <a>{{option.name}}</a>
                             </li>
                         </ul>
@@ -153,118 +138,16 @@
                     <div class="fl key brand">{{f.k}}</div>
                     <div class="value logos">
                         <ul class="logo-list">
-                            <li v-for="(option, j) in f.options" v-if="option.image">
+                            <li v-for="(option, j) in f.options" v-if="option.image" @click="selectFilter(f.k, option)">
                                 <img :src="option.image"/>
                             </li>
-                            <li style="text-align: center" v-else>
-                                <a style="line-height: 30px; font-size: 12px" href="#">{{option.name}}</a>
+                            <li style="text-align: center" v-else @click="selectFilter(f.k,option)">
+                                <a style="line-height: 30px; font-size: 12px" href="javascript:void(0)">{{option.name}}</a>
                             </li>
                         </ul>
                     </div>
                     <div class="fl ext">
                         <a href="javascript:void(0);" class="sui-btn">多选</a>
-                    </div>
-                </div>
-                <div class="type-wrap">
-                    <div class="fl key">网络制式</div>
-                    <div class="fl value">
-                        <ul class="type-list">
-                            <li>
-                                <a>GSM（移动/联通2G）</a>
-                            </li>
-                            <li>
-                                <a>电信2G</a>
-                            </li>
-                            <li>
-                                <a>电信3G</a>
-                            </li>
-                            <li>
-                                <a>移动3G</a>
-                            </li>
-                            <li>
-                                <a>联通3G</a>
-                            </li>
-                            <li>
-                                <a>联通4G</a>
-                            </li>
-                            <li>
-                                <a>电信3G</a>
-                            </li>
-                            <li>
-                                <a>移动3G</a>
-                            </li>
-                            <li>
-                                <a>联通3G</a>
-                            </li>
-                            <li>
-                                <a>联通4G</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="fl ext"></div>
-                </div>
-                <div class="type-wrap">
-                    <div class="fl key">显示屏尺寸</div>
-                    <div class="fl value">
-                        <ul class="type-list">
-                            <li>
-                                <a>4.0-4.9英寸</a>
-                            </li>
-                            <li>
-                                <a>4.0-4.9英寸</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="fl ext"></div>
-                </div>
-                <div class="type-wrap">
-                    <div class="fl key">摄像头像素</div>
-                    <div class="fl value">
-                        <ul class="type-list">
-                            <li>
-                                <a>1200万以上</a>
-                            </li>
-                            <li>
-                                <a>800-1199万</a>
-                            </li>
-                            <li>
-                                <a>1200-1599万</a>
-                            </li>
-                            <li>
-                                <a>1600万以上</a>
-                            </li>
-                            <li>
-                                <a>无摄像头</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="fl ext"></div>
-                </div>
-                <div class="type-wrap">
-                    <div class="fl key">价格</div>
-                    <div class="fl value">
-                        <ul class="type-list">
-                            <li>
-                                <a>0-500元</a>
-                            </li>
-                            <li>
-                                <a>500-1000元</a>
-                            </li>
-                            <li>
-                                <a>1000-1500元</a>
-                            </li>
-                            <li>
-                                <a>1500-2000元</a>
-                            </li>
-                            <li>
-                                <a>2000-3000元 </a>
-                            </li>
-                            <li>
-                                <a>3000元以上</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="fl ext">
                     </div>
                 </div>
                 <div class="type-wrap" style="text-align: center">
@@ -476,13 +359,15 @@
             ly,
             search: {
                 key: "",
-                page: 1
+                page: 1,
+                filter: {} //发送到后台的过滤项
             },
             goodsList: [], // 接收搜索得到的结果
             total: 0, // 总条数
             totalPage: 0, // 总页数
             filters: [], // 过滤参数集合,
-            show: false
+            show: false,
+            breads: []
         },
         created() {
             if (!location.search)
@@ -491,8 +376,8 @@
             search.page = search.page ? parseInt(search.page) : 1;
             search.sortBy = search.sortBy || "";
             search.descending = search.descending === 'true' || false;
+            search.filter = search.filter || {};
             this.search = search;
-            // this.searchFromServer();
             this.loadData();
         },
         <!--Cannot read property 'items' of undefined-->
@@ -504,7 +389,11 @@
                     }
                     this.total = data.total;
                     this.totalPage = data.totalPage;
-
+                    //初始化商品过滤参数
+                    if (data.categories.length === 1) {
+                        //若商品分类只有一个，直接查询三级商品分类，展示到面包屑
+                        ly.http.get("/item/category/all/level?id=" + data.categories[0].id).then(resp => this.breads = resp.data);
+                    }
                     //初始化分类过滤项
                     this.filters.push({
                         k: "分类",
@@ -517,15 +406,15 @@
                     });
 
                     data.specs.forEach(spec => {
-                        spec.options = spec.options.map(o => {
-                            ({name: o})
-                        });
+                        spec.options = spec.options.map(o => ({name: o}));
                         this.filters.push(spec)
                     });
+
                     data.items.forEach(goods => {
                         goods.skus = JSON.parse(goods.skus);
                         goods.selected = goods.skus[0];
                     });
+
                     this.goodsList = data.items;
                 }).catch(err => {
                     console.log("err->" + err)
@@ -542,7 +431,6 @@
                 }
             },
             index(i) {
-                console.log("index-->" + i);
                 if (this.search.page <= 3 || this.totalPage <= 5) {
                     // 如果当前页小于等于3或者总页数小于等于5
                     return i;
@@ -552,6 +440,35 @@
                 } else {
                     return this.totalPage - 5 + i;
                 }
+            },
+            selectFilter(k, o) {
+                console.log(k + " -> " + o);
+                const obj = {};
+                Object.assign(obj, this.search);
+                if (k === '分类' || k === '品牌') {
+                    obj.filter[k] = o.id;
+                } else {
+                    console.log(o.name);
+                    obj.filter[k] = o.name;
+                }
+
+                this.search = obj;
+            },
+            getFilterValue(k, v) {
+                // 如果没有过滤参数，我们跳过展示
+                if (!this.filters || this.filters.length === 0) {
+                    return null;
+                }
+                let filter = null;
+                // 判断是否是品牌
+                if (k === 'brandId') {
+                    // 返回品牌名称
+                    return this.filters.find(f => f.k === 'brandId').options[0].name;
+                }
+                return v;
+            },
+            removeFilter(k) {
+                this.search.filter[k] = null;
             }
         },
         watch: {
@@ -565,6 +482,18 @@
                     // 把search对象变成请求参数，拼接在url路径
                     window.location.href = "http://www.sc1.com/search.html?" + ly.stringify(val);
                 }
+            }
+        },
+        computed: {
+            remainFilters() {
+                const keys = Object.keys(this.search.filter);
+                if (this.search.filter.cid3) {
+                    keys.push("cid3")
+                }
+                if (this.search.filter.brandId) {
+                    keys.push("brandId")
+                }
+                return this.filters.filter(f => !keys.includes(f.k) && f.options.length > 1);
             }
         },
         components: {
