--- a/sc-portal/search.html
+++ b/sc-portal/search.html
@@ -201,7 +201,7 @@
                         <li class="yui3-u-1-5" v-for="(goods, index) in goodsList" :key="index">
                             <div class="list-wrap">
                                 <div class="p-img">
-                                    <a href="item.html" target="_blank"><img :src="goods.selected.image" height="200"
+                                    <a :href="'item/' + goods.id + '.html'" target="_blank"><img :src="goods.selected.image" height="200"
                                                                              alt=""/></a>
                                     <ul class="skus">
                                         <li :class="{selected: sku.id == goods.selected.id}"
