--- a/sc-portal/login.html
+++ b/sc-portal/login.html
@@ -109,11 +109,11 @@
         },
         methods:{
             login(){
-                leyou.http.post("/user/login",leyou.stringify(this.form))
+                leyou.http.post("/auth/accredit",leyou.stringify(this.form))
                     .then(resp => {
                         if(resp.status === 200){
                             const url = leyou.getUrlParam("returnUrl");
-                            window.location = url || 'http://www.leyou.com';
+                            window.location = url || 'http://www.sc1.com';
                         }
                     })
                     .catch(() => this.msg = '用户名或密码错误')
