--- a/ex-user-manage/src/main/resources/static/hellovue1.html
+++ b/ex-user-manage/src/main/resources/static/hellovue1.html
@@ -5,6 +5,7 @@
     <title>hello</title>
 </head>
 <script src="js/vuejs-2.5.16.js"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <body>
 <div id="app2008">
     {{message}}
@@ -14,6 +15,8 @@
 
     <p v-text="message"></p>
     <p v-html="message"></p>
+    <font size="5" v-bind:color="ys1">LALALA</font>
+    <font size="5" :color="ys1">LALALA</font>
 </div>
 </body>
 <script>
@@ -21,6 +24,9 @@
         el: "#app2008",
         data: {
             message: '<h1>冲出亚洲</h1>',
+            ys1: "red",
+            ys2: "green",
+            id: 1
         },
         methods: {
             fun1() {
